# CMSIS

./: CMakeLists.txt
Include/: stm32h7xx.h
Source/Templates/: CMakeLists.txt
